Added Hyp Test To Analysis

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -45176,27 +45176,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-10-31T23:36:28.666489Z",
-     "start_time": "2019-10-31T23:36:28.664381Z"
-    }
-   },
-   "outputs": [],
    "source": [
-    "# TODO"
+    "import statsmodels.api as sm\n",
+    "\n",
+    "df['YEAR'] = pd.to_numeric(df['YEAR'], errors='coerce')\n",
+    "df['OUTAGE.DURATION'] = pd.to_numeric(df['OUTAGE.DURATION'], errors='coerce')\n",
+    "\n",
+    "# Drop rows with NaN in 'YEAR' or 'OUTAGE.DURATION'\n",
+    "df = df.dropna(subset=['YEAR', 'OUTAGE.DURATION'])\n",
+    "\n",
+    "# Check for any infinite values, and replace them with NaN\n",
+    "df = df.replace([np.inf, -np.inf], np.nan)\n",
+    "\n",
+    "# Drop rows with NaN again, if new NaNs were added\n",
+    "df = df.dropna(subset=['YEAR', 'OUTAGE.DURATION'])\n",
+    "\n",
+    "# Ensure data types are float for the regression\n",
+    "df['YEAR'] = df['YEAR'].astype(float)\n",
+    "df['OUTAGE.DURATION'] = df['OUTAGE.DURATION'].astype(float)\n",
+    "\n",
+    "# Regression analysis\n",
+    "X = sm.add_constant(df['YEAR'])  # Adds a constant term to the predictor\n",
+    "y = df['OUTAGE.DURATION']\n",
+    "\n",
+    "model = sm.OLS(y, X).fit()  # OLS regression\n",
+    "summary = model.summary()\n",
+    "\n",
+    "# Print out the statistics\n",
+    "print(summary)\n",
+    "\n",
+    "fig = px.scatter(df, x='YEAR', y='OUTAGE.DURATION', trendline='ols',\n",
+    "                 trendline_color_override='red',\n",
+    "                 title='Power Outage Duration Over Time',\n",
+    "                 labels={'YEAR': 'Year', 'OUTAGE.DURATION': 'Outage Duration (minutes)'})\n",
+    "\n",
+    "fig.show()\n",
+    "fig.write_html('LR_Outage_Time.html', include_plotlyjs='cdn')"
    ]
   }
  ],
